--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGODB_URL = mongodb+srv://troy:Gruj3267@cluster0-orxh2.gcp.mongodb.net/goshop 
 PORT = 5000
 JWT_SECRET = 0
-PAYPAL_CLIENT_ID = 0
+PAYPAL_CLIENT_ID = AQwScxRSCQzeau0vUziAQPRza-1znVc3LgnmJ_Y7sT-yKKt3g_o0kRbdf45W5d6D_iaWUUTzHu4Owl2Y
