--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "js-cookie": "^2.2.1",
     "jscookie": "^1.1.0",
     "react": "^16.13.1",
+    "react-currency-format": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
