06-30-2020 Updates - Reviews section, AWS integration

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-MONGODB_URL = mongodb+srv://troy:Gruj3267@cluster0-orxh2.gcp.mongodb.net/goshop 
+MONGODB_URL_PROD = mongodb+srv://troy:Gruj3267@cluster0-orxh2.gcp.mongodb.net/goshop 
+MONGODB_URL = mongodb://localhost:27017/goshop 
 PORT = 5000
 JWT_SECRET = 0
 PAYPAL_CLIENT_ID = AQwScxRSCQzeau0vUziAQPRza-1znVc3LgnmJ_Y7sT-yKKt3g_o0kRbdf45W5d6D_iaWUUTzHu4Owl2Y
+accessKeyId = AKIAIJFCJTCQERIIZSEQ
+secretAccessKey = 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
